Improving code and fixing errors
